refactor server to v2